@@ -1763,7 +1763,11 @@ Db.prototype._executeQueryCommand = function(db_command, options, callback) {
     })
   }
 
-  if(!failFast && !config.isConnected() && config.autoReconnect) {
+  if(!failFast && !config.isConnected() && config.autoReconnect 
+      && (options.read == null 
+        || options.read == false
+        || options.read == ReadPreference.PRIMARY 
+        || config.checkoutReader() == null)) {
     this._state = 'connecting';
     return __retryCommandOnFailure(this,
                                    this.retryMiliSeconds,
